<resources>
    <string name="app_name">My Viewing List</string>

    <string name="action_search">Búsqueda</string>
    <string name="action_statistics">Estadísticas</string>

    <!--Bottom Nav-->
    <string name="library_name">Biblioteca</string>
    <string name="collection_name">Colecciones</string>
    <string name="add_name">Añadir cosa</string>

    <!--States-->
    <string name="states_title">Estado</string>
    <string name="viewing_name">Viendo</string>
    <string name="waiting_name">Pendiente</string>
    <string name="completed_name">Completado</string>
    <string name="dropped_name">Dropped</string>
    <string name="save_name">Guardar</string>

    <!--Types-->
    <string name="videogame_name">Videojuego</string>
    <string name="anime_name">Anime</string>
    <string name="manga_name">Manga</string>
    <string name="film_name">Película</string>
    <string name="serie_name">Serie</string>
    <string name="book_name">Libro</string>

    <!--Entry Form-->
    <string name="form_name">Nombre</string>
    <string name="form_type">Tipo</string>
    <string name="form_publication_text">Publicado el</string>
    <string name="form_completed_text">Completado el</string>
    <string name="form_edit_date">dd/mm/aaaa</string>
    <string name="form_add_collection">Añadir colecciones</string>
    <string name="form_annotation">Anotaciones</string>
    <string name="form_add">Crear entrada</string>
    <string name="entry_created">Entrada añadida</string>
    <string name="entry_deleted">Entrada eliminada</string>
    <string name="entry_create_fail">Fallo al crear nueva entrada</string>
    <string name="entry_delete_fail">Fallo al crear nueva entrada</string>
    <string name="entry_look">VER</string>
    <string name="entry_undo">DESHACER</string>
    <!--Form Error-->
    <string name="name_error">Introduzca un nombre</string>
    <string name="type_error">Selecciona un tipo</string>
    <string name="date_null_error">Selecciona una fecha</string>
    <string name="date_consistence_error">Selecciona una fecha posterior</string>

    <!--Entry Details-->
    <string name="entry_publication">Publicado el:</string>
    <string name="entry_completed">Completado el:</string>
    <string name="entry_annotation">Anotaciones</string>
    <string name="entry_annotation_add">Añadir</string>
    <string name="entry_annotation_edit">Editar</string>
    <string name="entry_annotation_update">Actualizar</string>
    <string name="update_success">Entrada actualizada</string>
    <string name="update_error">Fallo al actualizar la entrada</string>
    <string name="add_success">Entrada guardada con éxito</string>
    <string name="add_error">Fallo al guardar la entrada</string>
    <string name="save_error">No se ha podido realizar la operación</string>

    <!--Dialog-->
    <string name="cancel">Cancelar</string>
    <string name="ok">Aceptar</string>

</resources>